@@ -47,6 +47,7 @@ Version 1.1.4 to be released
 - Enh: Added CDbCacheDependency::params (Qiang)
 - Enh: Added CUrlManager::addRules() (Qiang)
 - Enh: Added support for using sqlsrv driver with MSSQL (Qiang)
+- Enh: Added CActiveForm::focus to set input focus on page load (mdomba)
 - Chg #1102: Added jQuery UI as a core client script package (Qiang)
 - Chg #1309: CHttpRequest::getPathInfo() now always returns decoded results (Qiang)
 - Chg #1494: CHtml::ajaxSubmitButton() will generate a submit button (Qiang)
